# YarnSpinner-Rust

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  404.html  CNAME  Cargo.toml  LICENSE-MIT  bevy_plugin.html  index.html  print.html  readme.md  searchindex.js  searchindex.json  working_without_bevy.html  yarn_files.html
crates/bevy_plugin/: Cargo.toml  index.html
crates/bevy_plugin/assets/: commands.yarn  de-CH.strings.csv  functions.yarn  hello_world.yarn  lines.yarn  lines_with_ids.yarn  options.yarn  story.yarn
crates/bevy_plugin/assets/tests/: wait.yarn
crates/bevy_plugin/examples/: hello_world.rs  story.rs
crates/bevy_plugin/src/: asset_provider.rs  assets.rs  commands.rs  config.rs  development_file_generation.rs  dialogue.rs  dialogue_configurator.rs  dialogue_runner.rs  example_ui.rs  file_generation_mode.rs  fmt_utils.rs  language.rs  lib.rs  line_asset_provider.rs  line_provider.rs  localization.rs  plugin.rs  project.rs  utils.rs  yarn_file_asset.rs  yarn_file_loader.rs
crates/bevy_plugin/src/commands/: command_registry.rs  command_wrapping.rs  execution.rs
crates/bevy_plugin/src/dialogue_runner/: builder.rs  data_providers.rs  dialogue_option.rs  events.rs  inner.rs  localized_line.rs  runtime_interaction.rs
crates/bevy_plugin/src/example_ui/: assets.rs  option_selection.rs  setup.rs  typewriter.rs  ui_setup.rs  updating.rs
crates/bevy_plugin/src/line_provider/: asset_provider.rs  text_provider.rs
crates/bevy_plugin/src/localization/: config.rs  language.rs  line_id_generation.rs  localizations.rs  strings_file.rs  strings_file_asset.rs  strings_file_creation.rs  strings_file_manipulation.rs
crates/bevy_plugin/src/plugin/: yarn_file_source.rs
crates/bevy_plugin/src/project/: compilation.rs
crates/bevy_plugin/tests/: test_asset_generation.rs  test_asset_provider.rs  test_assets.rs  test_dialogue_runner.rs  test_dialogue_runner_delivers_lines.rs  test_dialogue_runner_delivers_options.rs  test_dialogue_runner_runs_commands.rs  test_dialogue_runner_runs_functions.rs  test_strings_tables.rs  test_text_provider.rs
crates/bevy_plugin/tests/utils/: assertations.rs  assertion.rs  mod.rs
crates/bevy_plugin/wasm/: index.html  run.sh
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/compiler/: Cargo.toml  build.rs
crates/compiler/assets/: Headers.yarn  readme.md
crates/compiler/examples/: parse_input.rs
crates/compiler/src/: api.rs  collections.rs  compilation_steps.rs  compiler.rs  error_listener.rs  error_strategy.rs  file_parse_result.rs  input_manager.rs  intermediate.rs  lib.rs  listeners.rs  output.rs  parser.rs  parser_rule_context_ext.rs  string_table_manager.rs  token_ext.rs  visitors.rs
crates/compiler/src/compilation_steps/: add_initial_value_registrations.rs  add_tracking_declarations.rs  check_types.rs  clean_up_diagnostics.rs  create_declarations_for_tracking_nodes.rs  early_breaks.rs  find_tracking_nodes.rs  generate_code.rs  get_declarations.rs  parse_files.rs  register_initial_variables.rs  register_strings.rs  resolve_deferred_type_diagnostic.rs  validate_unique_node_names.rs
crates/compiler/src/compiler/: add_tags_to_lines.rs  antlr_rust_ext.rs  append_line_ids.rs  compilation_job.rs  run_compilation.rs  utils.rs
crates/compiler/src/listeners/: compiler_listener.rs  error_listener.rs  untagged_line_listener.rs
crates/compiler/src/output/: debug_info.rs  declaration.rs  generated.rs  mod.rs  readme.md  string_info.rs  yarn_spinner.proto
crates/compiler/src/parser/: YarnSpinnerLexer.g4  YarnSpinnerParser.g4  actual_types.rs  generated.rs  indent_aware_lexer.md  indent_aware_lexer.rs  readme.md  (+2 more)
crates/compiler/tests/: indent_aware_lexer.rs  language_tests.rs
crates/core/: Cargo.toml  build.rs
crates/core/examples/: function_container.rs  parse_input.rs
crates/core/parser/: YarnSpinnerLexer.g4  YarnSpinnerParser.g4  readme.md
crates/core/src/: collections.rs  declaration.rs  diagnostic.rs  feature_gates.rs  feature_traits.rs  function_wrappers.rs  internal_value.rs  lib.rs  library.rs  line_id.rs  operator.rs  parser.rs  position.rs  types.rs  value.rs  virtual_machine.rs  yarn_fn.rs  yarn_value.rs
crates/core/tests/: language_tests.rs
crates/example_dialogue_view/: Cargo.toml
crates/example_dialogue_view/src/: assets.rs  lib.rs  option_selection.rs  setup.rs  typewriter.rs  updating.rs
crates/internal_shared/: Cargo.toml
crates/internal_shared/src/: bug.rs  lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/src/: analyser.rs  command.rs  dialogue.rs  dialogue_option.rs  events.rs  feature_gates.rs  handlers.rs  language.rs  lib.rs  line.rs  line_provider.rs  markup.rs  pluralization.rs  string_newtype.rs  text_provider.rs  variable_storage.rs  virtual_machine.rs
crates/runtime/tests/: error_handling_tests.rs  language_tests.rs  project_tests.rs  tag_tests.rs  type_tests.rs
crates/yarn_slinger/: Cargo.toml
crates/yarn_slinger/src/: lib.rs
crates/yarn_slinger/tests/: dialogue_tests.rs  error_handling_tests.rs  language_tests.rs  markup_tests.rs  project_tests.rs  tag_tests.rs  type_tests.rs
crates/yarnspinner/: Cargo.toml
crates/yarnspinner/src/: lib.rs
crates/yarnspinner/tests/: dialogue_tests.rs  error_handling_tests.rs  language_tests.rs  project_tests.rs  tag_tests.rs  type_tests.rs
demo/: Cargo.toml  readme.md
demo/assets/: de-CH.strings.csv  story.yarn
demo/assets/dialogue/: de-CH.strings.csv
demo/assets/models/: coffee_shop.glb  coffee_shop.glb.REMOVED.git-id
demo/src/: easing.rs  main.rs  setup.rs  visual_effects.rs  yarn_slinger_integration.rs  yarnspinner_integration.rs
demo/wasm/: .gitignore  index.html  publish.sh  run.sh
examples/bevy_yarn_slinger/: Cargo.toml
examples/bevy_yarn_slinger/assets/: access_variables.yarn  custom_command.yarn  custom_function.yarn  hello_world.yarn
examples/bevy_yarnspinner/: Cargo.toml
examples/yarnspinner_without_bevy/: Cargo.toml
examples/yarnspinner_without_bevy/src/: lib.rs  terminal.rs  widgets.rs
src/: main.rs  (+2 more)
(+262 files in other folders)
