[workspace]
resolver = "2"

members = [
    "crates/example_dialogue_view",
    "crates/bevy_plugin",
    "crates/yarn_slinger",
    "crates/runtime",
    "crates/compiler",
    "crates/core",
    "crates/macros",
    "crates/codegen",
    "demo",
    "examples/bevy_yarn_slinger",
]

# Source: https://github.com/bevyengine/bevy/blob/main/examples/README.md#1-tweak-your-cargotoml
## Make Wasm builds as small as possible
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
