[package]
name = "bevy_yarnspinner_demo"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
keywords = ["gamedev", "dialog", "yarn", "bevy"]
categories = ["games"]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
description = "A demo for Bevy Yarn Spinner for Rust, the friendly tool for writing game dialogue"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.16.0-rc" }
bevy_yarnspinner = { path = "../crates/bevy_plugin", version = "0.5.0-rc.1" }
bevy_yarnspinner_example_dialogue_view = { path = "../crates/example_dialogue_view", version = "0.5.0-rc.1" }
# Patch needed until https://github.com/FraserLee/bevy_sprite3d/pull/32 is merged
bevy_sprite3d = { version = "5.0.0-rc", git = "https://github.com/janhohenheim/bevy_sprite3d.git", branch = "bevy-0.16-rc" }
