[package]
name = "bevy_yarnspinner"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
keywords = ["gamedev", "dialog", "yarn", "bevy"]
categories = ["game-development", "compilers"]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"
exclude = ["assets", "wasm"]
description = "Bevy plugin for Yarn Spinner for Rust, friendly tool for writing game dialogue"
readme = "../../readme.md"

[features]
default = []
audio_assets = ["bevy/bevy_audio", "bevy/vorbis"]

[dependencies]
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
yarnspinner = { path = "../yarnspinner", features = ["bevy", "serde"], version = "0.2" }
sha2 = "0.10"
rand = { version = "0.8", features = ["small_rng"] }


[target.'cfg(any(target_arch = "wasm32", target_os = "android"))'.dependencies.bevy]
version = "0.13"
default-features = false
features = ["bevy_asset", "serialize"]

[dev-dependencies]
tempfile = "3"

[dev-dependencies.bevy]
version = "0.13.0"
default-features = false
features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_winit",
  "file_watcher",
  "x11",
  "bevy_audio",
  "multi-threaded",
]

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies.bevy]
version = "0.13"
default-features = false
features = ["bevy_asset", "serialize", "file_watcher",]

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
glob = "0.3.1"
