[package]
name = "yarnspinner_codegen"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
keywords = ["gamedev", "dialog", "yarn", "bevy"]
categories = ["game-development", "compilers"]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"

[features]
default = []
proto = ["dep:prost", "dep:prost-build"]

[[bin]]
name = "generate_proto"
required-features = ["proto"]

[dependencies]
prost = { version = "0.12", optional = true }
prost-build = { version = "0.12", optional = true }
