[package]
name = "yarnspinner_compiler"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
categories = ["game-development", "compilers"]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"
description = "Compiler for Yarn Spinner for Rust, the friendly tool for writing game dialogue"

[features]
default = []
serde = ["dep:serde", "bevy?/serialize", "yarnspinner_core/serde"]
bevy = ["dep:bevy", "yarnspinner_core/bevy"]

[dependencies]
antlr-rust = "=0.3.0-beta"
better_any = "=0.2.0"
regex = "1"
yarnspinner_core = { path = "../core", version = "0.2" }
thiserror = "1"
strum = "0.26"
strum_macros = "0.26"
annotate-snippets = "0.10"
serde = { version = "1", features = ["derive"], optional = true }
bevy = { version = "0.13", default-features = false, optional = true }
rand = { version = "0.8", features = ["small_rng"] }
