[package]
name = "yarnspinner_core"
version = "0.3.0-rc"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
categories = ["game-development", "compilers"]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"
description = "Core concepts for Yarn Spinner for Rust, the friendly tool for writing game dialogue"

[features]
default = []
serde = ["dep:serde", "bevy?/serialize"]
bevy = ["dep:bevy"]

[dependencies]
yarnspinner_macros = { path = "../macros", version = "0.1" }
prost = "0.12"
serde = { version = "1", features = ["derive"], optional = true }
bevy = { version = "0.14.0-rc.2", default-features = false, optional = true }

[dev-dependencies]
static_assertions = "1.1.0"
