[package]
name = "yarnspinner_core"
version = "0.5.0-rc.1"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
categories = ["game-development", "compilers"]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"
description = "Core concepts for Yarn Spinner for Rust, the friendly tool for writing game dialogue"

[features]
default = []
serde = ["dep:serde", "bevy?/serialize"]
bevy = ["dep:bevy"]

[dependencies]
prost = "0.12"
serde = { version = "1", features = ["derive"], optional = true }
bevy = { version = "0.16.0-rc", default-features = false, optional = true }
variadics_please = "1.1.0"

[dev-dependencies]
static_assertions = "1.1.0"
