[package]
name = "bevy_yarnspinner_example_dialogue_view"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
keywords = ["gamedev", "dialog", "yarn", "bevy"]
categories = ["game-development", "compilers"]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"
description = "Example dialog view for Bevy Yarn Spinner for Rust, the friendly tool for writing game dialogue"
readme = "../../readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_yarnspinner = { path = "../bevy_plugin", version = "0.6.0" }
unicode-segmentation = "1"

[dependencies.bevy]
version = "0.17"
default-features = false
features = [
    "bevy_ui",
    "bevy_text",
    "bevy_render",
    "png",
    "bevy_asset",
    "bevy_window",
]
