[package]
name = "yarn_slinger_runtime"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
serde = [
  "dep:serde",
  "bevy?/serialize",
  "yarn_slinger_core/serde",
  "icu_locid/serde",
]
bevy = ["dep:bevy", "yarn_slinger_core/bevy"]

[dependencies]
yarn_slinger_core = { path = "../core" }
unicode-normalization = "0.1"
unicode-segmentation = "1"
log = "0.4"
icu_plurals = { version = "1", features = ["std"] }
icu_locid = { version = "1", features = ["std"] }
icu_provider = { version = "1", features = ["std"] }
icu_provider_adapters = { version = "1", features = ["std"] }
fixed_decimal = { version = "0.5", features = ["ryu", "std"] }
zerovec = { version = "0.9", features = ["std"] }
once_cell = "1"
regex = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"], optional = true }
bevy = { version = "0.11", default-features = false, optional = true }
