[package]
name = "yarnspinner_runtime"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
categories = ["game-development"]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"
description = "Runtime / VM for Yarn Spinner for Rust, the friendly tool for writing game dialogue"

[features]
default = []
serde = [
    "dep:serde",
    "bevy?/serialize",
    "yarnspinner_core/serde",
    "icu_locid/serde",
]
bevy = ["dep:bevy", "yarnspinner_core/bevy"]

[dependencies]
yarnspinner_core = { path = "../core", version = "0.3.0" }
unicode-normalization = "0.1"
unicode-segmentation = "1"
log = "0.4"
icu_plurals = { version = "1.5", features = ["std"] }
icu_locid = { version = "1.5", features = ["std"] }
fixed_decimal = { version = "0.5", features = ["ryu", "std"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"], optional = true }
bevy = { version = "0.15.0", default-features = false, optional = true }
