[package]
name = "yarnspinner"
version = "0.5.0-rc.1"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
keywords = ["gamedev", "dialog", "yarn"]
categories = ["game-development", "compilers"]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"
description = "The friendly tool for writing game dialogue"
readme = "../../readme.md"

[features]
default = []

serde = [
    "yarnspinner_core/serde",
    "yarnspinner_compiler/serde",
    "yarnspinner_runtime/serde",
]

bevy = [
    "yarnspinner_core/bevy",
    "yarnspinner_compiler/bevy",
    "yarnspinner_runtime/bevy",
]

[dependencies]
yarnspinner_core = { path = "../core", version = "0.5.0-rc" }
yarnspinner_compiler = { path = "../compiler", version = "0.5.0-rc" }
yarnspinner_runtime = { path = "../runtime", version = "0.5.0-rc" }
log = { version = "0.4", features = ["std"] }

[dev-dependencies]
regex = "1"
anyhow = "1"
