[package]
name = "yarnspinner_examples"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
keywords = ["gamedev", "dialog", "yarn", "bevy"]
categories = ["game-development", "compilers"]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
publish = false

[dependencies]
bevy = { version = "0.13", features = ["file_watcher"] }
bevy_yarnspinner = { path = "../../crates/bevy_plugin", version = "0.2" }
bevy_yarnspinner_example_dialogue_view = { path = "../../crates/example_dialogue_view", version = "0.2" }
