[package]
name = "yarnspinner_examples"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
keywords = ["gamedev", "dialog", "yarn", "bevy"]
categories = ["game-development", "compilers"]
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
publish = false

[dependencies]
bevy = { version = "0.14.0-rc.2", features = ["file_watcher"] }
bevy_yarnspinner = { path = "../../crates/bevy_plugin", version = "0.3.0-rc" }
bevy_yarnspinner_example_dialogue_view = { path = "../../crates/example_dialogue_view", version = "0.3.0-rc" }

[[bin]]
name = "access_variables"
doc = false

[[bin]]
name = "custom_command"
doc = false

[[bin]]
name = "custom_function"
doc = false

[[bin]]
name = "hello_world"
doc = false
