[package]
name = "yarnspinner_without_bevy_examples"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
keywords = ["gamedev", "dialog", "yarn", "bevy"]
categories = ["game-development", "compilers"]
authors = ["Joe Clay <27cupsofcoffee@gmail.com>"]
publish = false

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
anyhow = "1.0"
yarnspinner = { path = "../../crates/yarnspinner", version = "0.2" }
